multiple files, rudimentary subtheme support, some more error checky bits, such as they are

--- a/o/title.html
+++ b/o/title.html
@@ -10,6 +10,6 @@
 
 <p>test hey sup whats. <a href="localhost">you</a>.</p></div>
     </div>
-    <div id="nav">title</div>
+    <div id="nav">index</div>
   </body>
 </html>
