added a good test template, played around some more with file copy rules

--- a/o/index.html
+++ b/o/index.html
@@ -2,17 +2,22 @@
 <html lang="en">
   <head>
     <title>Home</title>
+    <script type="text/javascript" src="http://use.typekit.com/ojc7aad.js"></script>
+    <link href="/o/styles/style.css" rel="stylesheet" type="text/css">
   </head>
   <body>
-    <div id="content">
-      <h1>Home</h1>
+    <div id="wrapper">
+      <div class="top"></div>
+      <div id="logo"></div>
+      <p class="center sub">Home</p>
       <div id="body"><p>Home Page</p>
 
 <p>This is a home page <a href="about.html">about</a>. I should have a macro of somekind to link internally. I wonder how I'd do that.</p></div>
+      <div class="cap"></div>
+      <ul id="nav">
+        <li><a href='/o/about'>About</a></li>
+        <li><a href='/o/index.html'>Home</a></li>
+      </ul>
     </div>
-    <ul id="nav">
-      <li><a href='about'>About</a></li>
-      <li><a href='index.html'>Home</a></li>
-    </ul>
   </body>
 </html>
